homeStyle.css
* {
  padding: 0;
  margin: 0;
}
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-x: hidden;
  background-color: #e4e4e4;
}
header {
  display: flex;
  flex-direction: column;
}
.header-wrapper {
  display: flex;
  width: 1000px;
}
.card-one {
  width: 500px;
  height: 545px;
  background-color: #c7ddea;
  padding: 16px;
  padding-bottom: 0;
  overflow-y: hidden;
}
.heading-header {
  display: flex;
  flex-direction: column;
  width: 300px;
  padding: 50px;
  padding-bottom: 5px;
}
.heading-header h1 {
  font-family: "Frank Ruhl Libre", serif;
  font-weight: 1000;
  font-size: 40px;
}
.heading-header p {
  font-family: "Fira Sans", sans-serif;
  line-height: 1.7;
  font-size: 16px;
}
.heading-header p em {
  color: #fff;
  font-style: normal;
}
.family-images button {
  height: 48px;
  width: 200px;
  background-color: #fff;
  text-transform: uppercase;
  border-color: transparent;
  border-radius: 20px;
  font-size: 14px;
  font-family: "Fira Sans", sans-serif;
  font-weight: bold;
  white-space: nowrap;
  margin-bottom: 100px;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  margin-inline: 40px 0;
}
.family-images {
  display: flex;
  align-items: center;
}
.family-images img {
  width: 290px;
}
.card-two {
  display: flex;
  flex-direction: column;
  width: 500px;

  padding-bottom: 0;
  justify-content: center;
}
.card-two-top {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #f17949;
  height: 280px;
}
.card-two-bottom {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #fab131;
  height: 280px;
}
.content {
  display: flex;
  flex-direction: column;
  gap: 5px;
}
.content p {
  font-family: "Fira Sans", sans-serif;
  font-size: 10px;
  margin-inline: 5px;
}
.content h2 {
  font-size: 24px;
  font-family: "Frank Ruhl Libre", serif;
  color: #fff;
}
nav {
  display: flex;
  justify-content: space-between;
  background-color: transparent;
  align-items: center;
  height: 70px;
  width: 1000px;
}

.nav-item a {
  text-decoration: none;
  color: #a9a19e;
  font-weight: 500;
  font-size: 14px;
  font-family: "Fira Sans", sans-serif;
}

.nav-item a:active {
  color: #000;
}
.nav-item:nth-of-type(1) {
  margin-inline: 230px 0;
}
.nav-item:nth-of-type(1) a {
  color: #000;
}
.nav-item:nth-of-type(4) {
  margin-inline: 0 230px;
}
.main-content {
  display: flex;
  flex-direction: column;
  width: 1000px;
  padding: 0;
  margin: 0;
}
.main-card {
  display: flex;
  justify-content: space-between;
  width: 100%;
  position: relative;
  top: 100%;
  z-index: -1;
  margin-bottom: 0;
  background-color: #a9a19e;
  height: 545px;
  margin-inline: 0;
}
.add-start {
  display: flex;
  flex-direction: column;
  padding: 50px;
  gap: 55px;
  width: 300px;
  height: 500px;
  margin-inline: 100px 0;
}
.add-start h1 {
  font-family: "Frank Ruhl Libre", serif;
  font-weight: 1000;
  font-size: 40px;
  color: #fff;
}
.family-images {
  padding: 26px;
}
.family-images button {
  height: 48px;
  width: 160px;
  background-color: #fff;
  text-transform: uppercase;
  border-color: transparent;
  border-radius: 20px;
  font-size: 14px;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  font-family: "Fira Sans", sans-serif;
  font-weight: bold;
  white-space: nowrap;
  margin-bottom: 100px;
  align-self: flex-start;
}
.add-text {
  width: 280px;
  padding: 50px;
  margin-inline: 0 100px;
  height: 400px;
}
.add-text p {
  font-size: 16px;
  font-family: "Fira Sans", sans-serif;
  line-height: 1.7;
}
.cards {
  width: 1000px;
  display: flex;
  gap: 20px;
  margin-top: -140px;
  background-color: transparent;

  justify-content: center;
}
.card {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  width: 220px;
  max-height: 300px;
  margin-top: 0;
  border-radius: 4px;
  gap: 10px;
  padding: 10px;
  padding-bottom: 50px;
  overflow-y: visible;
}
.c1 .imageBox {
  background-color: #c7ddea;
}
.c2 .imageBox {
  background-color: #fab131;
}
.c3 .imageBox {
  background-color: #f17949;
}
.imageBox {
  display: flex;
  max-width: 220px;
  max-height: 100px;
  border-radius: 4px;
  padding: 16px;
  margin-top: -50px;
  display: flex;
  justify-content: center;
  justify-self: center;
  margin-inline: 0;
  margin-bottom: 40px;
  overflow: hidden;
}
.image1 {
  width: 80px;
  height: 150px;
}
.image {
  width: 100px;
  height: 300px;
}

h6 {
  font-family: "Frank Ruhl Libre", serif;
  font-size: 16px;
  font-weight: 600;
  align-self: center;
  margin-top: -30px;
}
.card p {
  font-family: "Fira Sans", sans-serif;
  line-height: 1.5;
  margin-inline: 20px;
  font-size: 10px;
}
.main-yellow-card {
  display: flex;
  justify-content: center;
  width: 1000px;
  margin-top: -140px;
  height: 690px;
  z-index: -1;
  padding-bottom: 0;
  top: 100%;
  background-color: #fab131;
}
.main-yellow-card article {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 45%;
}
.about {
  font-family: "Frank Ruhl Libre", serif;
  font-weight: 1000;
  font-size: 40px;
  color: #fff;
  margin-bottom: 40px;
}
.instructions {
  display: grid;
  grid-template-columns: repeat(3, 33.33%);
  grid-template-rows: repeat(2, 50%);
  top: 100%;
  width: 1000px;
  height: 660px;
}
.icard {
  grid-column-start: 1;
}

.ic1 {
  background-color: #c7ddea;
  grid-column: 1;
  grid-row-start: 1;
}
.icard {
  display: grid;
  grid-template-columns: 50px 200px 50px;
  grid-template-rows: repeat(3, 33.33%);
  grid-row-gap: 0;
  grid-column-gap: 0;
}
.howto {
  grid-column: 2;
  grid-row: 2;
  font-family: "Frank Ruhl Libre", serif;
  font-weight: 1000;
  font-size: 40px;
  margin-inline: 50px;
}
.num {
  grid-row: 1;
  grid-column: 1;
  margin-inline: 20px 0;
  margin-top: 20px;
  font-size: 30px;
  padding: 0;
  font-family: "Frank Ruhl Libre", serif;
  color: #a9a19e;
}
.ic5 .num {
  color: #66615f;
}
.ic5 .howtotext {
  white-space: nowrap;
  margin-inline: 0 20px;
}
.howtotext {
  grid-row: 2;
  margin-top: 35px;
  grid-column: 2;
  font-family: "Fira Sans", sans-serif;
}
.ic3 .howtotext {
  width: 120px;
  margin-inline: 20px;
}
.ic6 .howtotext {
  width: 120px;
  margin-inline: 100px;
}
.howto:nth-of-type(2) {
  white-space: nowrap;
  margin-top: 40px;
  margin-inline: 30px;
}

.ic2 {
  background-color: #fff;
  grid-column: 2;
  grid-row-start: 1;
}
.ic3 {
  background-color: transparent;
  grid-column: 3;
  grid-row-start: 1;
}
.ic4 {
  background-color: #fff;
  grid-column: 1;
  grid-row-start: 2;
  grid-row: 2;
}
.ic5 {
  background-color: #f17949;
  grid-column: 2;
  grid-row-start: 2;
}
.ic6 {
  background-color: #fff;
  grid-column: 3;
  grid-row-start: 2;
}
.up {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 1000px;
  background-color: #8a817e;
  height: 70px;
}
.up-btn {
  background-color: transparent;
  border: none;
  outline: none;
}
.up-btn .material-icons {
  max-width: 40px;
  font-size: 45px;
  line-height: 0.5;
}
.up p {
  font-size: 16px;
  font-family: "Fira Sans", sans-serif;
  margin-top: -15px;
}
footer {
  width: 1000px;
  position: relative;
  top: 100%;
}
.end-container {
  width: 100%;
  height: 300px;
  background-color: #66615f;
}

/*mobile*/
@media screen and (max-width: 768px) {
  body {
    max-width: 450px;
    overflow-x: hidden;
  }
  .header-wrapper {
    flex-direction: column;
    width: 450px;
  }
  .card-one {
    width: 450px;
    height: 655px;
    background-color: #c7ddea;
    padding: 0;
    padding-bottom: 0;
  }
  .heading-header {
    gap: 20px;
    padding-bottom: 20px;
  }
  .heading-header h1 {
    font-weight: 1000;
  }
  .family-images {
    flex-direction: column;
    align-items: flex-start;
    gap: 20px;
    padding: 30px;
  }
  .family-images button {
    margin-bottom: 0;
    margin-inline: 20px 0;
    font-size: 12px;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    width: 150px;
  }
  .family-images img {
    width: 310px;
    align-self: center;
  }
  .card-two-top,
  .card-two-bottom {
    display: flex;
    max-width: 450px;
  }
  .content p {
    opacity: 0.5;
    margin-inline: 20px;
    font-weight: bold;
  }
  .content h2 {
    font-size: 32px;
    padding-bottom: 30px;
  }
  nav {
    display: none;
  }
  .main-content {
    width: 450px;
  }
  .main-card {
    width: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 900px;
    overflow-y: visible;
  }
  .add-start {
    top: 100%;
    height: 140px;
    gap: 10px;
    overflow-x: hidden;
    flex-wrap: wrap;
    margin-inline: 15px;
    margin-top: -255px;
    padding: 30px;
    justify-content: flex-start;
    padding-inline: 0 50px;
  }
  .add-start button {
    display: none;
  }
  .add-text {
    padding: 0;
    margin-inline: 0;
    width: 70%;
    align-self: center;
  }
  .add-text p {
    padding: 16px;
    height: 100px;
    line-height: 1.5;
    margin-inline: 0;
  }
  .cards {
    width: 100%;
    top: 0;
    flex-direction: column;
    gap: 55px;
    background-color: #a9a19e;
    margin-top: -355px;
    padding-bottom: 55px;
    justify-content: center;
  }
  .card {
    align-self: center;
  }
  .main-yellow-card {
    width: 100%;
    margin-top: 0;
    height: 500px;
    padding-bottom: 55px;
  }
  .main-yellow-card article {
    width: 70%;
  }
  .instructions {
    display: grid;
    grid-template-columns: repeat(1, 100%);
    grid-template-rows: repeat(6, 16%);
    top: 100%;
    width: 100%;
    height: 1000px;
  }
  .howto {
    margin-inline: 0;
  }
  .howto {
    grid-column: 2;
    grid-row: 2;
    font-family: "Frank Ruhl Libre", serif;
    font-weight: 1000;
    font-size: 40px;
    margin-inline: 60px;
  }

  .icard {
    grid-template-columns: 50px 200px 50px;
    grid-template-rows: 20px 100px 20px;
    grid-row-gap: 20px;
    grid-column-gap: 30px;
  }
  .num {
    padding: 30px;
    padding-top: 0;
    margin-inline: 0;
  }
  .howtotext {
    margin-top: 20px;
  }
  .ic2 {
    grid-column: 1;
    grid-row: 2;
  }
  .ic3 {
    grid-column: 1;
    grid-row: 3;
  }
  .ic4 {
    grid-column: 1;
    grid-row: 4;
  }
  .ic5 {
    grid-column: 1;
    grid-row: 5;
  }
  .ic6 {
    grid-column: 1;
    grid-row: 6;
  }
  .up {
    display: none;
  }
  .end-container {
    width: 690px;
    margin-top: -45px;
  }
}

